package edu.fiuba.algo3.modelo;

/*
Se comenta de momento porque no se utiliza

public class Policia implements Obstaculo{
    public void pasarObstaculo(Auto auto, Jugador jugador){
    }
    public void pasarObstaculo(Moto moto, Jugador jugador){

    }
    public void pasarObstaculo(CuatroXCuatro camioneta, Jugador jugador){

    }
}
*/