package edu.fiuba.algo3.modelo;

/*
public abstract class Sorpresa implements ObjetoUrbano {

}
*/